# EconomicEngine

./: .gitignore  GridLayout.md  README.md  build_wasm.sh
.github/workflows/: deploy-pages.yml
eelib/: CMakeLists.txt  abm.cpp  abm.h  agent.cpp  agent.h  agent_manager.cpp  agent_manager.h  broker.cpp  broker.h  limits_bin.cpp  limits_bin.h  main.cpp  match.h  matcher.cpp  matcher.h  matcher2.cpp  matcher2.h  notifier2.cpp  notifier2.h  order.cpp  order.h  tick.h  wasm_bindings.cpp
eelib/tests/: abm_test.cpp  agent_test.cpp  inventory_test.cpp  manufacturer_test.cpp  matcher2_test.cpp  matcher_test.cpp
notes/: people.md  person.md  production.md  scarcity.md
webdemo/: charts.js  index.html
webdemo-svelte/: index.html  package-lock.json  package.json
webdemo-svelte/src/: App.svelte  app.css
webdemo-svelte/src/lib/charts/: renderers.ts
webdemo-svelte/src/lib/components/: Controls.svelte  DepthChart.svelte  SpreadChart.svelte  WidgetFrame.svelte  WidgetGrid.svelte
webdemo-svelte/src/lib/layout/: types.ts
webdemo-svelte/src/lib/sim/: controller.ts  types.ts
webdemo-svelte/src/lib/wasm/: eelib.ts
